# Compiler-Project

./: README.md  input.txt  output.txt  scanner.cpp
Parser/: graphviz_renderer.cpp  graphviz_renderer.h  mainwindow.ui  parser.cpp
Parser/Project/: Project.pro  mainwindow.cpp
TINYParserGUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  parser.h
parser/: parser.cpp
parser/input examples/invalid/: ex1.txt  ex2.txt  ex3.txt  ex4.txt  ex5.txt
parser/input examples/valid/: ex1.txt  ex2.txt  ex3.txt  ex4.txt  ex5.txt
scanner/: input.txt  output.txt  scanner.cpp
